# exel-migrator

./: Cargo.toml  docker-compose.yml  styles.css
public/: glue.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  settings.rs
src-tauri/src/utils/: config.rs  metabase.rs  mod.rs  mysql.rs
src/app/: migrator.rs  mod.rs  notification.rs  settings.rs
