[package]
name = "exel_mysql_migrator-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.60", features=["HtmlFormElement", "HtmlSelectElement"]}
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
thiserror="2.0.17"
uuid = { version = "1.7", features = ["v4", "js"] }
gloo-timers="0.3"

[workspace]
members = ["src-tauri"]
