[package]
name = "exel_mysql_migrator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "exel_mysql_migrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog="2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
mysql ="26.0.1"
calamine="0.31.0"
deunicode="1.6.2"
heck = "0.5.0"
chrono= "0.4.42"
reqwest = { version = "0.11", features = ["json"] }
config = "0.15.18"
toml = "0.9.7"
dirs= "6.0.0"
toml_edit = "0.22"
